tests/ui/rust-2024/gen-kw.e2015.stderr
error: `gen` is a keyword in the 2024 edition
  --> $DIR/gen-kw.rs:6:4
   |
LL | fn gen() {}
   |    ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
note: the lint level is defined here
  --> $DIR/gen-kw.rs:4:9
   |
LL | #![deny(rust_2024_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2024)]` implied by `#[deny(rust_2024_compatibility)]`
help: you can use a raw identifier to stay compatible
   |
LL | fn r#gen() {}
   |    ~~~~~

error: `gen` is a keyword in the 2024 edition
  --> $DIR/gen-kw.rs:12:9
   |
LL |     let gen = r#gen;
   |         ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |     let r#gen = r#gen;
   |         ~~~~~

error: `gen` is a keyword in the 2024 edition
  --> $DIR/gen-kw.rs:19:27
   |
LL |     () => { mod test { fn gen() {} } }
   |                           ^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
help: you can use a raw identifier to stay compatible
   |
LL |     () => { mod test { fn r#gen() {} } }
   |                           ~~~~~

error: aborting due to 3 previous errors

